[tool.poetry]
name = "mint-loan-book"
version = "0.1.3"
description = ""
authors = ["Raphael Krupinski"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
aiohttp = "^3.7.4"
humanize = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.15.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
