[tool.poetry]
name = "mint-loan-book"
version = "0.1.3"
description = ""
authors = ["Raphael Krupinski"]
packages = [{include = "mint_strategy", from = "src"}]

[tool.poetry.dependencies]
aiohttp = "^3.7.4"
appdirs = "^1.4.4"
humanize = "^3.11.0"
numexpr = "^2.7.3"
pandas = "^1.3.1"
python = "^3.9"
xlrd = "1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
